--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravelcollective/html": "^6.4",
         "ramsey/uuid": "^4.7",
         "spatie/laravel-permission": "^5.10",
+        "spatie/pdf-to-image": "^1.2",
         "turanjanin/serbian-transliterator": "^1.0"
     },
     "require-dev": {
