--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
         "ramsey/uuid": "^4.7",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.4",
         "spatie/laravel-permission": "^5.10",
+        "spatie/pdf-to-image": "^2.2",
         "turanjanin/serbian-transliterator": "^1.0"
     },
     "require-dev": {
