--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,8 @@
+
+	
 <IfModule mod_rewrite.c>
+
+
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
@@ -18,4 +22,12 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+	
+	php_value upload_max_filesize 500M
+    php_value post_max_size 500M
+    php_value max_execution_time 600
 </IfModule>
+
+php_value upload_max_filesize 500M
+php_value post_max_size 500M
+php_value max_execution_time 600
