--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,7 @@
 /public/build
 /public/hot
 /public/storage
-/storage
-/storage/logs
-/storage/framework/cache
-/storage/*.key
+/storage/*
 /vendor
 .env
 .env.backup
@@ -20,3 +17,4 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+storage/logs/laravel.log
